--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Provides a basic structure to execute react.",
   "main": "src/main.js",
   "dependencies": {
-    "@material-ui/core": "^1.5.0",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.3.13",
@@ -12,13 +11,8 @@
     "babel-preset-stage-0": "^6.3.13",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-html-parser": "^2.0.2",
-    "react-number-format": "3.3.4",
-    "react-owl-carousel2": "^0.3.0",
-    "react-text-mask": "5.4.1",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "validator": "^10.6.0"
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "css-loader": "^1.0.0",
@@ -28,8 +22,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --host localhost --inline --hot --history-api-fallback --content-base public",
-    "build": "webpack --config webpack.prod.js",
-    "build-dev": "webpack --config webpack.hml.js",
+    "build": "webpack --config webpack.config.js",    
     "stats": "webpack --json > stats.json"
   },
   "author": "Marcus Vinicius Dantas Oliveira",
